# GFD

./: .gitignore  CAD_DESIGN.md  CAD_SPACECLAIM.md  CLAUDE.md  Cargo.toml  GUI_DESIGN.md  GUI_GPU_MPI_PLAN.md  LICENSE  MESHER_PLAN.md  PROJECT_PLAN.md  README.md  SOLVER_API.md  UI_FEATURES.md  WORKFLOW_AUDIT.md  program.md  results.tsv  test_report.html
.claude/: ralph-loop.local.md
benches/: gfd_benchmark.rs
crates/gfd-boundary/: Cargo.toml
crates/gfd-boundary/src/: custom.rs  lib.rs  profiles.rs  synthetic_turbulence.rs  traits.rs
crates/gfd-boundary/src/standard/: mod.rs
crates/gfd-cad/: Cargo.toml
crates/gfd-cad-bool/: Cargo.toml
crates/gfd-cad-bool/src/: lib.rs  mesh.rs
crates/gfd-cad-feature/: Cargo.toml
crates/gfd-cad-feature/src/: array.rs  chamfer.rs  fillet.rs  helix.rs  lib.rs  mirror.rs  offset.rs  pad.rs  platonic.rs  pocket.rs  primitive.rs  profile.rs  pyramid.rs  revolve.rs  transform.rs  wedge.rs
crates/gfd-cad-geom/: Cargo.toml
crates/gfd-cad-geom/src/: bbox.rs  lib.rs  point.rs  vec.rs
crates/gfd-cad-geom/src/curve/: bezier.rs  bspline.rs  circle.rs  ellipse.rs  hermite.rs  line.rs  mod.rs  nurbs.rs  polyline.rs
crates/gfd-cad-geom/src/surface/: bspline.rs  cone.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs  torus.rs
crates/gfd-cad-heal/: Cargo.toml
crates/gfd-cad-heal/src/: lib.rs
crates/gfd-cad-io/: Cargo.toml
crates/gfd-cad-io/src/: brep.rs  dxf.rs  lib.rs  obj.rs  off.rs  ply.rs  step.rs  stl.rs  vtk.rs  wrl.rs  xyz.rs
crates/gfd-cad-measure/: Cargo.toml
crates/gfd-cad-measure/src/: lib.rs
crates/gfd-cad-sketch/: Cargo.toml
crates/gfd-cad-sketch/src/: lib.rs
crates/gfd-cad-tessel/: Cargo.toml
crates/gfd-cad-tessel/src/: earclip.rs  grid.rs  lib.rs
crates/gfd-cad-topo/: Cargo.toml
crates/gfd-cad-topo/src/: adjacency.rs  arena.rs  builder.rs  iter.rs  lib.rs  orientation.rs  shape.rs
crates/gfd-cad/src/: document.rs  lib.rs  rpc.rs
crates/gfd-core/: Cargo.toml
crates/gfd-core/src/: lib.rs
crates/gfd-coupling/: Cargo.toml
crates/gfd-coupling/src/: interface.rs  lib.rs  traits.rs
crates/gfd-discretize/: Cargo.toml
crates/gfd-discretize/src/: lib.rs  pipeline.rs
crates/gfd-expression/: Cargo.toml
crates/gfd-expression/src/: ast.rs  codegen_json.rs  codegen_latex.rs  codegen_rust.rs  differentiate.rs  dimension.rs  lib.rs  linearize.rs  parser.rs  simplify.rs  tokenizer.rs  validate.rs
crates/gfd-fluid/: Cargo.toml
crates/gfd-fluid/src/: eos.rs  lib.rs
crates/gfd-fluid/src/combustion/: mod.rs  reaction.rs  species.rs
crates/gfd-fluid/src/compressible/: ausm.rs  hllc.rs  mod.rs  roe.rs
crates/gfd-fluid/src/incompressible/: mod.rs  piso.rs  simple.rs  simplec.rs
crates/gfd-fluid/src/multiphase/: dpm.rs  euler_euler.rs  level_set.rs  mixture.rs  mod.rs  vof.rs
crates/gfd-fluid/src/source/: mod.rs  porous.rs
crates/gfd-fluid/src/turbulence/: mod.rs  transport_solver.rs  wall_treatment.rs
crates/gfd-fluid/src/turbulence/les/: mod.rs
crates/gfd-gpu/: Cargo.toml
crates/gfd-gpu/cuda_kernels/: correction.cu  flux.cu  gradient.cu
crates/gfd-gpu/src/: device.rs  lib.rs  memory.rs  sparse.rs  transfer.rs
crates/gfd-gpu/src/kernels/: correction.rs  flux.rs  gradient.rs  mod.rs  reduction.rs
crates/gfd-gpu/src/solver/: amgx.rs  gpu_cg.rs  mod.rs
crates/gfd-io/: Cargo.toml
crates/gfd-io/src/: checkpoint.rs  json_input.rs  lib.rs  probes.rs  vdb_writer.rs  vtk_writer.rs
crates/gfd-linalg/: Cargo.toml
crates/gfd-linalg/src/: lib.rs  traits.rs
crates/gfd-material/: Cargo.toml
crates/gfd-material/src/: database.rs  lib.rs  thermal.rs  traits.rs
crates/gfd-material/src/fluid/: ideal_gas.rs  mod.rs  newtonian.rs  non_newtonian.rs
crates/gfd-material/src/solid/: elastic.rs  hyperelastic.rs  mod.rs  plasticity.rs
crates/gfd-matrix/: Cargo.toml
crates/gfd-matrix/src/: assembler.rs  block.rs  boundary.rs  diagnostics.rs  lib.rs  modify.rs  sparse.rs
crates/gfd-mesh/: Cargo.toml
crates/gfd-mesh/src/: lib.rs
crates/gfd-parallel/: Cargo.toml
crates/gfd-parallel/src/: domain_decomp.rs  lib.rs  mpi_comm.rs  thread_pool.rs
crates/gfd-postprocess/: Cargo.toml
crates/gfd-postprocess/src/: derived_field.rs  integrals.rs  lib.rs  statistics.rs  traits.rs
crates/gfd-solid/: Cargo.toml
crates/gfd-solid/src/: contact.rs  creep.rs  dynamics.rs  elastic.rs  hyperelastic.rs  lib.rs  thermal_stress.rs
crates/gfd-solid/src/plasticity/: drucker_prager.rs  mod.rs  tresca.rs  von_mises.rs
crates/gfd-source/: Cargo.toml
crates/gfd-source/src/: buoyancy.rs  lib.rs  momentum_source.rs  porous.rs  traits.rs  volume_source.rs
crates/gfd-thermal/: Cargo.toml
crates/gfd-thermal/src/: conduction.rs  conjugate.rs  convection.rs  lib.rs  phase_change.rs
crates/gfd-thermal/src/radiation/: discrete_ordinates.rs  mod.rs  p1.rs  view_factor.rs
crates/gfd-turbulence/: Cargo.toml
crates/gfd-turbulence/src/: custom.rs  lib.rs  model_template.rs  validation.rs  wall_functions.rs
crates/gfd-vdb/: Cargo.toml
crates/gfd-vdb/src/: lib.rs
docs/: CAD_KERNEL_PLAN.md  CLI_ADAPTATION_PLAN.md  IMPLEMENTED_FEATURES.md  TECHNICAL.md
examples/: backward_step.json  diffusion_reaction.json  diffusion_source.json  forced_convection.json  heat_conduction.json  heat_sink.json  heat_transfer_fins.json  lid_driven_cavity.json  multi_region_conduction.json  natural_convection.json  pipe_flow.json  solid_beam.json  vortex_decay.json
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/.claude/: ralph-loop.local.md
gui/electron/: main.js  preload.js
gui/src/: App.tsx  vite-env.d.ts
gui/src/components/: ContextMenu3D.tsx  LeftPanelStack.tsx  MeasureOverlay.tsx  MenuBar.tsx  MiniToolbar.tsx  OutlineTree.tsx  PropertyGrid.tsx  Ribbon.tsx  RibbonCadV2.tsx  SelectionFilter.tsx  SplitLayout.tsx  StatusBar.tsx  TabRouter.tsx  ToolOptions.tsx
gui/src/engine/: csg.ts  (+6 more)
src/: api.rs  config_gen.rs  lib.rs  main.rs  server.rs
tests/: analytical_validation.rs  physics_validation.rs  validation_suite.rs
tools/: decimate_stl.mjs  mesh_from_stl.mjs  tessellate_3dm.mjs  visualize.py
(+166 files in other folders)
