[workspace]
resolver = "2"
members = [
    "crates/gfd-core",
    "crates/gfd-expression",
    "crates/gfd-discretize",
    "crates/gfd-matrix",
    "crates/gfd-linalg",
    "crates/gfd-turbulence",
    "crates/gfd-material",
    "crates/gfd-boundary",
    "crates/gfd-source",
    "crates/gfd-coupling",
    "crates/gfd-postprocess",
    "crates/gfd-fluid",
    "crates/gfd-thermal",
    "crates/gfd-solid",
    "crates/gfd-io",
    "crates/gfd-parallel",
    "crates/gfd-vdb",
    "crates/gfd-gpu",
    "crates/gfd-mesh",
    "crates/gfd-cad-geom",
    "crates/gfd-cad-topo",
    "crates/gfd-cad-bool",
    "crates/gfd-cad-sketch",
    "crates/gfd-cad-feature",
    "crates/gfd-cad-io",
    "crates/gfd-cad-heal",
    "crates/gfd-cad-measure",
    "crates/gfd-cad-tessel",
    "crates/gfd-cad",
]

[package]
name = "gfd"
version = "0.1.0"
edition = "2021"
description = "Generalized Finite Difference multi-physics solver"

[[bin]]
name = "gfd"
path = "src/main.rs"

[[bin]]
name = "gfd-benchmark"
path = "benches/gfd_benchmark.rs"

[[bin]]
name = "gfd-server"
path = "src/server.rs"

[features]
default = []
gpu = ["gfd-gpu/cuda"]
gpu-amgx = ["gpu", "gfd-gpu/amgx"]

# ---------------------------------------------------------------------------
# Shared dependency versions (consumed via `dep.workspace = true` in crates)
# ---------------------------------------------------------------------------
[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
nalgebra      = "0.33"
nalgebra-sparse = "0.10"
rayon        = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap         = { version = "4", features = ["derive"] }
anyhow       = "1"
thiserror    = "2"
approx       = "0.5"

# ---------------------------------------------------------------------------
# Root binary dependencies
# ---------------------------------------------------------------------------
[dependencies]
# Local workspace crates
gfd-core        = { path = "crates/gfd-core" }
gfd-fluid       = { path = "crates/gfd-fluid" }
gfd-thermal     = { path = "crates/gfd-thermal" }
gfd-solid       = { path = "crates/gfd-solid" }
gfd-coupling    = { path = "crates/gfd-coupling" }
gfd-io          = { path = "crates/gfd-io" }
gfd-expression  = { path = "crates/gfd-expression" }
gfd-linalg      = { path = "crates/gfd-linalg" }
gfd-parallel    = { path = "crates/gfd-parallel" }
gfd-vdb         = { path = "crates/gfd-vdb" }
gfd-source      = { path = "crates/gfd-source" }
gfd-turbulence  = { path = "crates/gfd-turbulence" }
gfd-matrix      = { path = "crates/gfd-matrix" }
gfd-discretize  = { path = "crates/gfd-discretize" }
gfd-boundary    = { path = "crates/gfd-boundary" }
gfd-material    = { path = "crates/gfd-material" }
gfd-postprocess = { path = "crates/gfd-postprocess" }
gfd-mesh        = { path = "crates/gfd-mesh" }
gfd-cad         = { path = "crates/gfd-cad" }
gfd-gpu         = { path = "crates/gfd-gpu", optional = true }

# External (from workspace)
clap              = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
