[package]
name = "gfd-material"
version = "0.1.0"
edition = "2021"
description = "Material property SDK for the GFD solver framework"

[dependencies]
gfd-core = { path = "../gfd-core" }
gfd-expression = { path = "../gfd-expression" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
