[package]
name = "gfd-thermal"
version = "0.1.0"
edition = "2021"

[dependencies]
gfd-core = { path = "../gfd-core" }
gfd-discretize = { path = "../gfd-discretize" }
gfd-matrix = { path = "../gfd-matrix" }
gfd-linalg = { path = "../gfd-linalg" }
gfd-material = { path = "../gfd-material" }
gfd-boundary = { path = "../gfd-boundary" }
gfd-source = { path = "../gfd-source" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
